--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -2,6 +2,19 @@
 /* Col{
     padding-left: 0px !important;
 } */
+.sidebar{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #eee;
+    padding-top: 60px;
+    box-shadow: inset 0 0 3px gray;
+    padding-right: 0px;
+}
+.sidebar a {
+    display: block;
+}
 
 .sidebar ul{
     margin: 0 ;
